fix featured image looks stretch on mobile

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -481,6 +481,14 @@ footer.footer {
 	div.page {
 		padding-top: 13.15rem;
 	}
+	// Blog
+	section.c4x-blog {
+		.post-thumbnail-img {
+			img {
+				height: auto;
+			}
+		}
+	}
 	.c-rasakan-pengalaman-baru-berbelanja-pakai-empatkali {
 		ol li {
 			span {
